{
    "name": "GameActions",
    "maps": [
        {
            "name": "Map",
            "id": "1040fbe0-cedc-41eb-9dc8-a2fec8aa5de3",
            "actions": [
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "ca6831fb-9a94-442b-8f61-fc5318260e22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "9a42800e-b6f3-4a18-a5d1-d9ad27d5d631",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "939a705b-e4e6-4c5b-9d0b-7f19d9844b6d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d02562c4-7c3e-45ff-bec1-b6b434068b37",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5565b70-cfb1-4842-b581-9434ae9ca4db",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35e71692-a0b8-4d5b-a796-b297414f811c",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Android",
            "bindingGroup": "Android",
            "devices": [
                {
                    "devicePath": "<AndroidGamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}